--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -8,6 +8,30 @@ html {
   box-sizing: inherit;
 }
 
+h1 {
+  margin: 0;
+  color: $white;
+  font-size: 40px;
+  opacity: 80%;
+}
+
+h2 {
+  margin: 0;
+  color: $white;
+  font-size: 34px;
+  opacity: 80%;
+}
+h3 {
+  margin: 0;
+  color: $white;
+  font-size: 28px;
+}
+p {
+  margin: 0;
+  color: $white;
+  font-size: 16px;
+}
+
 img {
   height: auto;
   max-width: 100%;
