--- a/src/partials/body.html
+++ b/src/partials/body.html
@@ -2,7 +2,7 @@
   <div class="block-1">
       <button id="buttonClick" type="button" class="btn__click" value="Click">Click on me</button>
   </div>
-  <div clas="block-2">
+  <div class="block-2">
       <div class="counter">
           <div class="counter__text">
               <h2 class="container__text--title">counter</h2>
@@ -13,5 +13,18 @@
               <button type="button" class="plusBtn counterBtn btn" value="plus"></button>
           </div>
       </div>
+  </div>
+  <div class="block-3">
+    <div class="swiper swiperImages">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><img loading="lazy" src="../img/picture_01.png" role="img" alt="spaceship"></div>
+        <div class="swiper-slide"><img loading="lazy" src="../img/picture_02.png" role="img" alt="spaceship"></div>
+      </div>
+      <div class="swiper-scrollbar"></div>
+    </div>
+  </div>
+  <div class="block-4">
+
+
   </div>
 </div>
