--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,4 +9,5 @@
 @import "./components/body";
 @import "./components/button";
 @import "./components/counter";
+@import "./components/swiper";
 @import "./components/footer";
