update path to images

--- a/src/partials/body.html
+++ b/src/partials/body.html
@@ -17,8 +17,8 @@
   <div class="block-3">
     <div class="swiper swiperImages">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img loading="lazy" src="../img/picture_01.png" role="img" alt="spaceship"></div>
-        <div class="swiper-slide"><img loading="lazy" src="../img/picture_02.png" role="img" alt="spaceship"></div>
+        <div class="swiper-slide"><img loading="lazy" src="./img/picture_01.png" role="img" alt="spaceship"></div>
+        <div class="swiper-slide"><img loading="lazy" src="./img/picture_02.png" role="img" alt="spaceship"></div>
       </div>
       <div class="swiper-scrollbar"></div>
     </div>
