--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,10 +2,10 @@
   <div class="footer__links">
     <section>
       <a href="https://github.com/gbsk-an" class="footer__links--item">
-        <img loading="lazy" src="../img/svg/github.svg" role="img" alt="Github">
+        <img loading="lazy" src="./img/svg/github.svg" role="img" alt="Github">
       </a>
       <a href="https://t.me/gubskaya_ann" class="footer__links--item">
-        <img loading="lazy" src="../img/svg/telegram.svg" role="img" alt="Telegram">
+        <img loading="lazy" src="./img/svg/telegram.svg" role="img" alt="Telegram">
       </a>
     </section>
   </div>
