Add to do list and local time

--- a/src/partials/body.html
+++ b/src/partials/body.html
@@ -24,7 +24,29 @@
     </div>
   </div>
   <div class="block-4">
+    <div class="time">
+      <h3>Local time:</h3>
+      <h1 id="localTime"></h1>
+    </div>
+  </div>
+  <div class="block-5">
+    <div class="container todo">
+      <div class="alert feedback">
+        <p>write value for item</p>
+      </div>
+      <form id="itemForm" class="todo__form">
+        <h3 class="todo__title">to do list</h3>
+        <div class="todo__flex">
+          <input type="text" class="todo__input" id="itemInput" placeholder="name...">
+          <button class="todo__button--add btn-reset" type="submit">add item</button>
+        </div>
+       </form>
+       <div class="">
+        <div class="item-list">
 
-
+        </div>
+        <button type="button" class="todo__button--clear btn-reset" id="clear-list">clear items</button>
+      </div>
+    </div>
   </div>
 </div>
