--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,5 +9,7 @@
 @import "./components/body";
 @import "./components/button";
 @import "./components/counter";
+@import "./components/localTime";
 @import "./components/swiper";
+@import "./components/toDoList";
 @import "./components/footer";
