--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -64,7 +64,7 @@ a {
   appearance: none;
   border: none;
   border-radius: 0;
-  background-color: #fff;
+  background-color: transparent;
 
   &::-webkit-search-decoration,
   &::-webkit-search-cancel-button,
@@ -106,3 +106,4 @@ a {
 .page--ios .dis-scroll {
   position: relative;
 }
+
