--- a/src/scss/components/_body.scss
+++ b/src/scss/components/_body.scss
@@ -2,7 +2,6 @@
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
     "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  @include bg-cover;
   background-image: url("../img/background_01.png");
 }
 
@@ -16,4 +15,10 @@
   gap: 0 32px;
   max-width: 1200px;
   margin: 0 auto;
+}
+
+.container {
+  padding: 2em;
+  background-color: $purple-light;
+  border-radius: 10px;
 }
