--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -3,12 +3,9 @@
 }
 
 .btn__click {
+  @include btn;
   padding: 2em;
-  background-color: $deep-blue;
-  border-radius: 10px;
-  border: 1px solid $medium-blue;
   box-shadow: $shadow;
-  color: $white;
   font-size: 16px;
   letter-spacing: 3px;
   text-transform: lowercase;
