--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -26,6 +26,16 @@ h3 {
   color: $white;
   font-size: 28px;
 }
+h4 {
+  margin: 0;
+  color: $white;
+  font-size: 24px;
+}
+h5 {
+  margin: 0;
+  color: $white;
+  font-size: 20px;
+}
 p {
   margin: 0;
   color: $white;
