--- a/src/scss/components/_counter.scss
+++ b/src/scss/components/_counter.scss
@@ -1,5 +1,5 @@
 .block-2 {
-  grid-column: 3 / span 3;
+  grid-column: 4 / span 3;
 }
 
 .counter {
@@ -11,7 +11,7 @@
   &__text {
     margin-bottom: 1em;
     &--title {
-      margin-bottom: .8em;
+      margin-bottom: 0.8em;
     }
   }
 
