Responsive for mobile & add quotes block

--- a/src/partials/content.html
+++ b/src/partials/content.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper ptb-5">
   <div class="block-1">
     <div class="time">
       <h3>Local time:</h3>
@@ -79,6 +79,15 @@
           clear items
         </button>
       </div>
+    </div>
+  </div>
+  <div class="block-6">
+    <div class="quote">
+      <button type="button" id="generate-btn" class="quote__btn btn-reset" value="generate quote">generate quote</button>
+      <div class="quote__text">
+        <h4 class="quotes"></h4>
+      </div>
+      <p class="author"></p>
     </div>
   </div>
 </div>
