--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,10 +5,11 @@
 @import "settings";
 
 // page components
-@import "./components/body";
+@import "./components/content";
 @import "./components/button";
 @import "./components/counter";
 @import "./components/localTime";
+@import "./components/randomQuote";
 @import "./components/swiper";
 @import "./components/toDoList";
 @import "./components/footer";
